[idea] added default icon and a way to customize the filetype icon. Also improved xtend-specific icons